--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,15 +1,3 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 html,
 body {
   max-width: 100vw;
@@ -35,8 +23,12 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.navbar {
+  display: flex;
+  width: 100%;
+  height: 30px;
+  background-color: #0a0a0a;
+  color: #fff;
+  align-items: center;
+  padding: 0 5%;
 }
